--- a/src/components/portfolioBlock/styles.css
+++ b/src/components/portfolioBlock/styles.css
@@ -30,7 +30,7 @@
 .portfolio-title-container {
   display: flex;
   flex-direction: column;
-  align-self: center;
+  align-self: flex-start;
 }
 
 .portfolio-title-container #portfolio-name {
